samples/_failures_safe/1761214825_d80534_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba0847fc.c: In function ‘boundingbox_calculate’:
./samples/SAFE/__tmp_ba0847fc.c:137: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ba0847fc.c:136:5: error: expected declaration or statement at end of input
  136 |     for
      |     ^~~
